Commit overflow fix 2018 07 20 YYJ

--- a/Nadri/WebContent/css/toolbar.css
+++ b/Nadri/WebContent/css/toolbar.css
@@ -69,7 +69,6 @@ html, body {
 	align-items: center;
 	border-bottom: 1px solid rgba(212, 212, 212, 0);
 	transition: all 1s;
-	overflow: hidden;
 	z-index: 999;
 }
 
@@ -83,7 +82,6 @@ html, body {
 	transition-property: height;
 	box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
 	align-items: center;
-	overflow: hidden;
 	z-index: 999;
 	background: rgba(212, 212, 212, 0.65);
 }
@@ -325,7 +323,6 @@ html, body {
 		transition-property: height;
 		box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
 		align-items: center;
-		overflow: hidden;
 		z-index: 999;
 	}
 	
